<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/rock"
        android:contentDescription="@string/rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/rock"
        android:onClick="rockClick"
        />

    <ImageView
        android:id="@+id/paper2"
        android:contentDescription="@string/paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/paper" 
        android:onClick="paperClick"/>

    <ImageButton
        android:id="@+id/scissors"
        android:contentDescription="@string/scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/scissors"
        android:onClick="scissorsClick" />

    <TextView
        android:id="@+id/textEr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rock"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:text="@string/cpu" />

    <TextView
        android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/default2" />

</RelativeLayout>